--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "axios": "^1.7.9",
     "horario-front": "file:",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.2.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
